Fix Overlap content on document section

--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -1,7 +1,7 @@
 .content {
   box-sizing: border-box;
   display: flex;
-  width: 100% - $toc-width;
+  width: calc(100% - #{$toc-width});
   padding: 32px;
 
   h1 {
@@ -29,6 +29,6 @@
 // Tablets: hide toc
 @media (min-width: $width-sm) and (max-width: $width-md) {
   .content {
-    width: 100% - $toc-width;
+    width: calc(100% - #{$toc-width});
   }
 }
